AAT Lists added + new Logs Viewer

--- a/etc/octopussy/apache2.conf
+++ b/etc/octopussy/apache2.conf
@@ -6,7 +6,8 @@
 	SSLCertificateFile    /etc/octopussy/server.crt
   SSLCertificateKeyFile /etc/octopussy/server.key
 	DirectoryIndex index.asp
-	Options ExecCGI
+#	Options ExecCGI
+#	Options All
 
 	<Directory "/usr/share/octopussy/">
     Options +FollowSymLinks
