--- a/etc/octopussy/apache2.conf
+++ b/etc/octopussy/apache2.conf
@@ -3,11 +3,13 @@
 	ServerName octopussy
 	DocumentRoot /usr/share/octopussy/
 	SSLEngine on
+
+	SSLCACertificateFile /etc/octopussy/CA/cacert.pem
+##	SSLCARevocationFile /etc/octopussy/CA/cacert.crl
+
 	SSLCertificateFile    /etc/octopussy/server.crt
   SSLCertificateKeyFile /etc/octopussy/server.key
 	DirectoryIndex index.asp
-#	Options ExecCGI
-#	Options All
 
 	<Directory "/usr/share/octopussy/">
     Options +FollowSymLinks
@@ -26,5 +28,10 @@
     PerlSetVar RequestParams 1
     PerlSetVar XMLSubsMatch \w+:[\w\-]+
 	</Files>
+
+#	<Location "/login.asp">
+#		SSLVerifyClient require
+#  	SSLVerifyDepth 1
+#	</Location>
 
 </VirtualHost>
