--- a/etc/octopussy/apache2.conf
+++ b/etc/octopussy/apache2.conf
@@ -4,7 +4,7 @@
 	DocumentRoot /usr/share/octopussy/
 	SSLEngine on
 
-	SSLCACertificateFile /etc/octopussy/CA/cacert.pem
+##	SSLCACertificateFile /etc/octopussy/CA/cacert.pem
 ##	SSLCARevocationFile /etc/octopussy/CA/cacert.crl
 
 	SSLCertificateFile    /etc/octopussy/server.crt
