Bugfix rsyslog not listening on TCP/UDP 514 after installation (ID: 2790769)

--- a/etc/rsyslog.d/octopussy.conf
+++ b/etc/rsyslog.d/octopussy.conf
@@ -5,4 +5,12 @@
 #$ActionResumeRetryCount -1    # infinite retries on insert failure
 #$ActionQueueSaveOnShutdown on # save in-memory data if rsyslog shuts down
 
+# provides UDP syslog reception
+$ModLoad imudp
+$UDPServerRun 514
+
+# provides TCP syslog reception
+$ModLoad imtcp
+$InputTCPServerRun 514
+
 *.* |/var/spool/octopussy/octo_fifo
