--- a/etc/octopussy/apache2.conf
+++ b/etc/octopussy/apache2.conf
@@ -60,19 +60,11 @@ ServerTokens Full
 ServerSignature Off
 
 <IfModule mod_setenvif.c>
-    # The following directives modify normal HTTP response behavior to
-    # handle known problems with browser implementations.
     BrowserMatch "Mozilla/2" nokeepalive
     BrowserMatch "MSIE 4\.0b2;" nokeepalive downgrade-1.0 force-response-1.0
     BrowserMatch "RealPlayer 4\.0" force-response-1.0
     BrowserMatch "Java/1\.0" force-response-1.0
     BrowserMatch "JDK/1\.0" force-response-1.0
-
-    # The following directive disables redirects on non-GET requests for
-    # a directory that does not include the trailing slash.  This fixes a 
-    # problem with Microsoft WebFolders which does not appropriately handle 
-    # redirects for folders with DAV methods.
-    # Same deal with Apple's DAV filesystem and Gnome VFS support for DAV.
     BrowserMatch "Microsoft Data Access Internet Publishing Provider" redirect-carefully
     BrowserMatch "MS FrontPage" redirect-carefully
     BrowserMatch "^WebDrive" redirect-carefully
@@ -119,11 +111,11 @@ ServerSignature Off
 # Catalyst Console
 #
 #PerlSwitches -I/usr/share/octopussy/console/OctopussyWeb/lib
-  <Perl>
-        use lib qw(/usr/share/octopussy/console/lib);
-  </Perl>
-  PerlModule OctopussyWeb
-  <Location /console>
-        SetHandler          modperl
-        PerlResponseHandler OctopussyWeb
-  </Location>
+#  <Perl>
+#        use lib qw(/usr/share/octopussy/console/lib);
+#  </Perl>
+#  PerlModule OctopussyWeb
+#  <Location /console>
+#        SetHandler          modperl
+#        PerlResponseHandler OctopussyWeb
+#  </Location>
