--- a/etc/octopussy/apache2.conf
+++ b/etc/octopussy/apache2.conf
@@ -33,7 +33,7 @@ DefaultType text/plain
 
 HostnameLookups Off
 
-ErrorLog /var/log/apache2/error.log
+ErrorLog /var/log/apache2/octopussy-error.log
 LogLevel warn
 
 # Include module configuration:
