Major Services Updates (thanks to Michael Schneck)

--- a/etc/rsyslog.d/octopussy.conf
+++ b/etc/rsyslog.d/octopussy.conf
@@ -1,16 +1,31 @@
-#$WorkDirectory /var/log/rsyslog
-#$ActionQueueType LinkedList   # use asynchronous processing
-#$ActionQueueSize 10
-#$ActionQueueFileName queue # set file name, also enables disk mode
-#$ActionResumeRetryCount -1    # infinite retries on insert failure
-#$ActionQueueSaveOnShutdown on # save in-memory data if rsyslog shuts down
+#########################################
+#### GLOBAL DIRECTIVES FOR OCTOPUSSY ####
+#########################################
 
-# provides UDP syslog reception
-$ModLoad imudp
-$UDPServerRun 514
+$FileOwner root
+$FileGroup adm
+$FileCreateMode 0640
+$DirCreateMode 0750
+$Umask 0022
+$WorkDirectory /var/lib/octopussy/local/rsyslog
+$CreateDirs on
 
-# provides TCP syslog reception
-$ModLoad imtcp
-$InputTCPServerRun 514
+$MaxMessageSize 8k
+
+$ActionQueueMaxDiskSpace 1g
+$ActionQueueFileName rsyslog
+$ActionQueueHighWaterMark 250000
+$ActionQueueLowWaterMark 200000
+$ActionQueueType LinkedList # [FixedArray/LinkedList/Direct/Disk]
+$ActionQueueSaveOnShutdown on
+$ActionQueueWorkerThreads 1 # 1 cpu
 
 *.* |/var/spool/octopussy/octo_fifo
+
+
+###############
+#### RULES ####
+###############
+
+# Remove all messages from other server
+:hostname, !isequal, "XDVLOGR" ~
