Better CentOS & Debian install

--- a/etc/rsyslog.d/octopussy.conf
+++ b/etc/rsyslog.d/octopussy.conf
@@ -28,4 +28,4 @@ $ActionQueueWorkerThreads 1 # 1 cpu
 ###############
 
 # Remove all messages from other server
-:hostname, !isequal, "XDVLOGR" ~
+:hostname, !isequal, "your_server_name" ~
