Modification of Debian/Ubuntu apache2.conf file to use Snakeoil SSL Certificate in order to simplify Octopussy installation

--- a/etc/octopussy/apache2_debian.conf
+++ b/etc/octopussy/apache2_debian.conf
@@ -80,8 +80,8 @@ ServerSignature Off
   SSLEngine on
 # SSLCACertificateFile /etc/octopussy/CA/cacert.pem
 # SSLCARevocationFile /etc/octopussy/CA/cacert.crl
-  SSLCertificateFile    /etc/octopussy/server.crt
-  SSLCertificateKeyFile /etc/octopussy/server.key
+  SSLCertificateFile    /etc/ssl/certs/ssl-cert-snakeoil.pem
+  SSLCertificateKeyFile /etc/ssl/private/ssl-cert-snakeoil.key
   DirectoryIndex index.asp
 
   <Directory "/usr/share/octopussy/">
