Bugfixing Web Interface issues reported on Google+ (https://plus.google.com/113385322268951381996/posts/jKcDgysHBic)

--- a/etc/octopussy/apache2_other.conf
+++ b/etc/octopussy/apache2_other.conf
@@ -29,8 +29,6 @@ KeepAliveTimeout 15
 User octopussy
 Group octopussy
 
-DefaultType text/plain
-
 HostnameLookups Off
 
 ErrorLog /var/log/httpd/octopussy-error.log
@@ -40,6 +38,9 @@ LoadModule dir_module           /etc/httpd/modules/mod_dir.so
 LoadModule perl_module          /etc/httpd/modules/mod_perl.so
 LoadModule ssl_module           /etc/httpd/modules/mod_ssl.so
 LoadModule log_config_module    /etc/httpd/modules/mod_log_config.so
+LoadModule mime_module           /etc/httpd/modules/mod_mime.so
+
+TypesConfig /etc/mime.types
 
 Listen 8888
 
