--- a/dist.ini
+++ b/dist.ini
@@ -61,7 +61,7 @@ version            = 0
 XML::Simple        = 0
 
 ; Adds LICENSE file 
-[License]
+;[License]
 
 ; Adds README file with distribution name, version, abstract & license
 [Readme]
