dist.ini simplification for Octopussy 2.0 first tests

--- a/dist.ini
+++ b/dist.ini
@@ -30,7 +30,7 @@ encoding = bytes
 Test::More  = 0
 
 [Prereqs]
-Apache::ASP      = 0
+;Apache::ASP      = 0
 App::Info        = 0
 Cache::Cache     = 0
 Crypt::PasswdMD5 = 0
@@ -38,7 +38,7 @@ Date::Manip      = 0
 DBD::mysql       = 0
 DBI              = 0
 JSON             = 0
-Linux::Inotify2  = 0
+;Linux::Inotify2  = 0
 List::MoreUtils  = 0
 Locale::Maketext::Lexicon = 0
 Locale::Maketext::Simple = 0
@@ -52,7 +52,7 @@ Net::XMPP          = 0
 Proc::PID::File    = 0
 Proc::ProcessTable = 0
 Readonly           = 0
-Regexp::Assemble   = 0
+;Regexp::Assemble   = 0
 Sys::CPU           = 0
 Term::ProgressBar  = 0
 Unix::Syslog       = 0
