--- a/dist.ini
+++ b/dist.ini
@@ -14,6 +14,7 @@ match = ^usr/share/aat/THEMES/DEFAULT/EXTRAS/
 match = ^usr/share/octopussy/CSS/smoothness/images/
 match = ^usr/share/octopussy/HELP/IMG/
 match = ^usr/share/octopussy/IMG/
+match = ^public/fonts/
 encoding = bytes
  
 [GatherDir]
@@ -40,8 +41,8 @@ DBI              = 0
 JSON             = 0
 ;Linux::Inotify2  = 0
 List::MoreUtils  = 0
-Locale::Maketext::Lexicon = 0
-Locale::Maketext::Simple = 0
+;Locale::Maketext::Lexicon = 0
+;Locale::Maketext::Simple = 0
 LWP                = 0
 Mail::Sender       = 0
 Net::FTP           = 0
@@ -51,14 +52,14 @@ Net::Telnet        = 0
 Net::XMPP          = 0
 Proc::PID::File    = 0
 Proc::ProcessTable = 0
-Readonly           = 0
+;Readonly           = 0
 ;Regexp::Assemble   = 0
 Sys::CPU           = 0
 Term::ProgressBar  = 0
 Unix::Syslog       = 0
 URI                = 0
 version            = 0
-XML::Simple        = 0
+;XML::Simple        = 0
 
 ; Adds LICENSE file 
 ;[License]
