Trying to fix Travis CI issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ perl:
   - "5.12"
   - "5.10"
 before_install:
+  - "cpanm --notest Regexp::Assemble"
   - "dzil authordeps | xargs cpanm"
 install: "dzil listdeps | xargs cpanm"
 script: "dzil test"
