Add File::Slurp in [Prereqs]

--- a/dist.ini
+++ b/dist.ini
@@ -37,6 +37,7 @@ Crypt::PasswdMD5 = 0
 Date::Manip      = 0
 DBD::mysql       = 0
 DBI              = 0
+File::Slurp      = 0
 JSON             = 0
 Linux::Inotify2  = 0
 List::MoreUtils  = 0
