Fixing latest Travis CI issues

--- a/dist.ini
+++ b/dist.ini
@@ -50,6 +50,7 @@ Net::LDAP          = 0
 Net::SCP           = 0
 Net::Telnet        = 0
 Net::XMPP          = 0
+Path::Tiny         = 0
 Proc::PID::File    = 0
 Proc::ProcessTable = 0
 Readonly           = 0
