Fixing latest Travis CI issues (Test::Output missing in dist.ini [Prereqs / TestRequires]

--- a/dist.ini
+++ b/dist.ini
@@ -27,7 +27,8 @@ encoding = bytes
 [Manifest]
 
 [Prereqs / TestRequires]
-Test::More  = 0
+Test::More   = 0
+Test::Output = 0
 
 [Prereqs]
 Apache::ASP      = 0
