'PerlSetVar SecureSession 1' directive added to Apache 2 configuration files to enable HTTP Header flag 'secure' on every .asp page

--- a/etc/octopussy/apache2_debian.conf
+++ b/etc/octopussy/apache2_debian.conf
@@ -95,6 +95,7 @@ ServerSignature Off
     AddDefaultCharset utf-8
     SetHandler perl-script
     PerlHandler Apache::ASP
+    PerlSetVar SecureSession 1
     PerlSetVar StateDB MLDBM::Sync::SDBM_File
     PerlSetVar Global /usr/share/octopussy
     PerlSetVar StateDir /var/cache/octopussy/asp
