--- a/Docker/Dockerfile.debian7
+++ b/Docker/Dockerfile.debian7
@@ -39,11 +39,10 @@ RUN apt-get install -y \
 RUN apt-get install -y patch unzip \
 	&& curl -L -s -o /tmp/Octopussy-master.zip https://github.com/sebthebert/Octopussy/archive/master.zip \
 	&& cd /tmp \ 
-	&& unzip Octopussy-master.zip
-	&& cd /tmp/Octopussy-master
-	&& bash LINUX/INSTALL.sh
+	&& unzip Octopussy-master.zip \
+	&& cd /tmp/Octopussy-master \
+	&& bash LINUX/INSTALL.sh \
 
-RUN mkdir /home/octopussy
 
 # WHATS MISSING
 
@@ -53,11 +52,7 @@ RUN mkdir /home/octopussy
 #RUN apt-get install patch
 
 
-
-
-#RUN curl -L -s -o /tmp/Octopussy-1.0.14.tar.gz https://github.com/sebthebert/Octopussy/archive/Octopussy-1.0.14.tar.gz \
-#	&& cd /tmp \ 
-#	&& tar xfz Octopussy-1.0.14.tar.gz
+# RUN mkdir /home/octopussy
 
 #ADD INSTALL.sh /tmp/Octopussy-Octopussy-1.0.14/LINUX/INSTALL.sh
 
