--- a/Docker/Dockerfile.debian7
+++ b/Docker/Dockerfile.debian7
@@ -37,6 +37,7 @@ RUN apt-get install -y \
 	libfile-slurp-perl
 
 RUN apt-get install -y patch unzip \
+	&& apt-get install -y libpath-tiny-perl \
 	&& curl -L -s -o /tmp/Octopussy-master.zip https://github.com/sebthebert/Octopussy/archive/master.zip \
 	&& cd /tmp \ 
 	&& unzip Octopussy-master.zip \
@@ -45,12 +46,6 @@ RUN apt-get install -y patch unzip \
 
 
 # WHATS MISSING
-
-#RUN apt-get install -y libpath-tiny-perl
-#	or cpan Path::Tiny -> apt-get install make
-
-#RUN apt-get install patch
-
 
 # RUN mkdir /home/octopussy
 
