--- a/Docker/Dockerfile.debian7
+++ b/Docker/Dockerfile.debian7
@@ -40,10 +40,10 @@ RUN apt-get install -y patch unzip \
 	&& apt-get install -y libpath-tiny-perl \
 	&& curl -L -s -o /tmp/Octopussy-master.zip https://github.com/sebthebert/Octopussy/archive/master.zip \
 	&& cd /tmp \ 
-	&& unzip Octopussy-master.zip \
+	&& unzip -q Octopussy-master.zip \
 	&& cd /tmp/Octopussy-master \
 	&& bash LINUX/INSTALL.sh
-
+	&& rm -f /tmp/Octopussy-master.zip
 
 # WHATS MISSING
 
