--- a/Docker/Dockerfile.debian7
+++ b/Docker/Dockerfile.debian7
@@ -38,7 +38,7 @@ RUN apt-get install -y \
 
 RUN apt-get install -y patch unzip \
 	&& apt-get install -y cpanminus make \
-	&& cpanm Path::Tiny \
+	&& cpanm Mail::Sender Path::Tiny \
 	&& curl -L -s -o /tmp/Octopussy-master.zip https://github.com/sebthebert/Octopussy/archive/master.zip \
 	&& cd /tmp \ 
 	&& unzip -q Octopussy-master.zip \
