Working on Debian 7 Dockerfile... (libdata-guid-perl added)

--- a/Docker/Dockerfile.debian7
+++ b/Docker/Dockerfile.debian7
@@ -37,7 +37,7 @@ RUN apt-get install -y \
 	libfile-slurp-perl
 
 RUN apt-get install -y patch unzip \
-	&& apt-get install -y cpanminus make \
+	&& apt-get install -y cpanminus make libdata-guid-perl \
 	&& cpanm Mail::Sender Path::Tiny \
 	&& curl -L -s -o /tmp/Octopussy-master.zip https://github.com/sebthebert/Octopussy/archive/master.zip \
 	&& cd /tmp \ 
