--- a/Docker/Dockerfile.debian8
+++ b/Docker/Dockerfile.debian8
@@ -19,48 +19,36 @@ RUN apt-get install -y \
     
 RUN apt-get install -y \
 	libapache2-mod-perl2 libapache-asp-perl libapp-info-perl \
-	libunix-syslog-perl libxml-simple-perl libcrypt-passwdmd5-perl 
-
-RUN apt-get install -y \
+	libunix-syslog-perl libxml-simple-perl libcrypt-passwdmd5-perl \
 	libdbi-perl libdbd-mysql-perl libsys-cpu-perl \
     	libdate-manip-perl libnet-scp-perl libnet-telnet-perl \
-	libnet-xmpp-perl libemail-sender-perl libnet-ldap-perl 
-
-RUN apt-get install -y \
+	libnet-xmpp-perl libemail-sender-perl libnet-ldap-perl \
 	librrd4 rrdtool htmldoc liblinux-inotify2-perl libcache-cache-perl \
     	libproc-processtable-perl liburi-perl libproc-pid-file-perl \
-    	libwww-perl libjson-perl libreadonly-perl libregexp-assemble-perl 
-
-RUN apt-get install -y \
+    	libwww-perl libjson-perl libreadonly-perl libregexp-assemble-perl \
 	liblist-moreutils-perl libterm-progressbar-perl \
 	liblocale-maketext-lexicon-perl libdatetime-format-strptime-perl \
 	libfile-slurp-perl
 
-RUN mkdir /home/octopussy
+RUN apt-get install -y patch unzip \
+	&& apt-get install -y cpanminus make libdata-guid-perl \
+	&& cpanm Mail::Sender Path::Tiny \
+	&& curl -L -s -o /tmp/Octopussy-master.zip https://github.com/sebthebert/Octopussy/archive/master.zip \
+	&& cd /tmp \ 
+	&& unzip -q Octopussy-master.zip \
+	&& cd /tmp/Octopussy-master \
+	&& mv etc/octopussy/apache2_debian.conf etc/octopussy/apache2.conf \
+	&& bash LINUX/INSTALL.sh \
+	&& rm -f /tmp/Octopussy-master.zip
 
 # WHATS MISSING
 
-#RUN apt-get install -y libpath-tiny-perl
-#	or cpan Path::Tiny -> apt-get install make
-
-#RUN apt-get install patch
-
-
-
-
-#RUN curl -L -s -o /tmp/Octopussy-1.0.14.tar.gz https://github.com/sebthebert/Octopussy/archive/Octopussy-1.0.14.tar.gz \
-#	&& cd /tmp \ 
-#	&& tar xfz Octopussy-1.0.14.tar.gz
+# RUN mkdir /home/octopussy
 
 #ADD INSTALL.sh /tmp/Octopussy-Octopussy-1.0.14/LINUX/INSTALL.sh
 
 #ADD octo_docker.sh /usr/sbin/octo_docker.sh
 
 #RUN chmod 755 /usr/sbin/octo_docker.sh
-
-#RUN \
-#	cd /tmp/Octopussy-Octopussy-1.0.14/LINUX/ && \
-#	chmod 755 *.sh && \
-#	./INSTALL.sh
 
 #ENTRYPOINT [ "/usr/sbin/octo_docker.sh" ]
