Make Travis CI work

--- a/dist.ini
+++ b/dist.ini
@@ -15,13 +15,17 @@ match = ^usr/share/octopussy/CSS/smoothness/images/
 match = ^usr/share/octopussy/HELP/IMG/
 match = ^usr/share/octopussy/IMG/
 encoding = bytes
- 
+
 [GatherDir]
 
 ; Adds META.YML file
 [MetaYAML]
+[MetaJSON]
+[MetaTests]
+[CPANFile]
 
 [PruneCruft]
+except = ^\.travis.yml
 
 [MakeMaker]
 [Manifest]
@@ -63,7 +67,7 @@ URI                = 0
 version            = 0
 XML::Simple        = 0
 
-; Adds LICENSE file 
+; Adds LICENSE file
 ;[License]
 
 ; Adds README file with distribution name, version, abstract & license
@@ -86,3 +90,6 @@ critic_config = xt/release/perlcritic.rc
 [PodSyntaxTests]
 
 [Test::Kwalitee]
+[Test::EOL]
+[Test::Portability]
+[Test::UnusedVars]
