Dist::Zilla - Disable 'test_vms_length' & 'test_one_dot' in [Test::Portability]

--- a/dist.ini
+++ b/dist.ini
@@ -90,6 +90,12 @@ critic_config = xt/release/perlcritic.rc
 [PodSyntaxTests]
 
 [Test::Kwalitee]
+
 [Test::EOL]
+
 [Test::Portability]
+; disable test_one_dot for jquery filenames
+; test_vms_length (too restrictive length)
+options = test_one_dot = 0, test_vms_length = 1
+
 [Test::UnusedVars]
