--- a/DEBIAN/control
+++ b/DEBIAN/control
@@ -1,9 +1,9 @@
 Package: octopussy
-Version: 1.0.14
+Version: 1.0.16
 Section: net
 Priority: optional
 Architecture: all
-Depends: adduser, debconf, apache2, rsyslog|syslog-ng, nscd, perl, perl-modules, sudo, mysql-server, libapache2-mod-perl2, libapache-asp-perl, libapp-info-perl, libunix-syslog-perl, libxml-simple-perl, libcrypt-passwdmd5-perl, libdbi-perl, libdbd-mysql-perl, libsys-cpu-perl, libdate-manip-perl, libnet-scp-perl, libnet-telnet-perl, libnet-xmpp-perl, libmail-sender-perl, libnet-ldap-perl, librrd4|librrd2, rrdtool, htmldoc, liblinux-inotify2-perl, libcache-cache-perl, libproc-processtable-perl|libproc-process-perl, liburi-perl, libproc-pid-file-perl, libwww-perl, libjson-perl, libreadonly-perl, libregexp-assemble-perl, liblist-moreutils-perl, libterm-progressbar-perl, liblocale-maketext-lexicon-perl, libdatetime-format-strptime-perl, libfile-slurp-perl 
+Depends: adduser, debconf, apache2, rsyslog|syslog-ng, nscd, perl, perl-modules, sudo, mysql-server, libapache2-mod-perl2, libapache-asp-perl, libapp-info-perl, libunix-syslog-perl, libxml-simple-perl, libcrypt-passwdmd5-perl, libdbi-perl, libdbd-mysql-perl, libsys-cpu-perl, libdate-manip-perl, libnet-scp-perl, libnet-telnet-perl, libnet-xmpp-perl, libmail-sender-perl, libnet-ldap-perl, librrd4|librrd2, rrdtool, htmldoc, liblinux-inotify2-perl, libcache-cache-perl, libpath-tiny-perl, libproc-processtable-perl|libproc-process-perl, liburi-perl, libproc-pid-file-perl, libwww-perl, libjson-perl, libreadonly-perl, libregexp-assemble-perl, liblist-moreutils-perl, libterm-progressbar-perl, liblocale-maketext-lexicon-perl, libdatetime-format-strptime-perl, libfile-slurp-perl 
 Maintainer: Sebastien Thebert <octopussy@onetool.pm>
 Description: logs analyzer, alerter & reporter
  Octopussy is a logs analyzer, alerter & reporter with Web interface.
