Simplifying apache2.conf files

--- a/etc/octopussy/apache2_debian.conf
+++ b/etc/octopussy/apache2_debian.conf
@@ -1,7 +1,6 @@
 ServerRoot "/etc/octopussy"
 ServerName octopussy
 
-LockFile /var/lock/apache2/accept-octopussy.lock
 PidFile /var/run/octopussy/apache2.pid
 
 Timeout 300
@@ -9,27 +8,11 @@ KeepAlive On
 MaxKeepAliveRequests 100
 KeepAliveTimeout 15
 
-<IfModule mpm_prefork_module>
-    StartServers          5
-    MinSpareServers       5
-    MaxSpareServers      10
-    MaxClients          150
-    MaxRequestsPerChild   0
-</IfModule>
-
-<IfModule mpm_worker_module>
-    StartServers          2
-    MaxClients          150
-    MinSpareThreads      25
-    MaxSpareThreads      75 
-    ThreadsPerChild      25
-    MaxRequestsPerChild   0
-</IfModule>
+IncludeOptional /etc/apache2/mods-enabled/mpm_event.load
+IncludeOptional /etc/apache2/mods-enabled/mpm_event.conf
 
 User octopussy
 Group octopussy
-
-DefaultType text/plain
 
 HostnameLookups Off
 
@@ -37,6 +20,8 @@ ErrorLog /var/log/apache2/octopussy-error.log
 LogLevel warn
 
 # Include module configuration:
+Include /etc/apache2/mods-available/authn_core.load
+Include /etc/apache2/mods-available/authz_core.load
 Include /etc/apache2/mods-available/dir.load
 Include /etc/apache2/mods-available/mime.load
 Include /etc/apache2/mods-available/perl.load
@@ -45,7 +30,7 @@ Include /etc/apache2/mods-available/ssl.load
 Include /etc/apache2/mods-available/dir.conf
 Include /etc/apache2/mods-available/mime.conf
 Include /etc/apache2/mods-available/setenvif.conf
-Include /etc/apache2/mods-available/ssl.conf
+#Include /etc/apache2/mods-available/ssl.conf
 
 Listen 8888
 
@@ -58,22 +43,6 @@ CustomLog /var/log/apache2/octopussy.log vhost_combined
 
 ServerTokens Full
 ServerSignature Off
-
-<IfModule mod_setenvif.c>
-    BrowserMatch "Mozilla/2" nokeepalive
-    BrowserMatch "MSIE 4\.0b2;" nokeepalive downgrade-1.0 force-response-1.0
-    BrowserMatch "RealPlayer 4\.0" force-response-1.0
-    BrowserMatch "Java/1\.0" force-response-1.0
-    BrowserMatch "JDK/1\.0" force-response-1.0
-    BrowserMatch "Microsoft Data Access Internet Publishing Provider" redirect-carefully
-    BrowserMatch "MS FrontPage" redirect-carefully
-    BrowserMatch "^WebDrive" redirect-carefully
-    BrowserMatch "^WebDAVFS/1.[012]" redirect-carefully
-    BrowserMatch "^gnome-vfs/1.0" redirect-carefully
-    BrowserMatch "^XML Spy" redirect-carefully
-    BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
-</IfModule>
-
 
   ServerName octopussy
   DocumentRoot /usr/share/octopussy/
