--- a/dist.ini
+++ b/dist.ini
@@ -37,11 +37,16 @@ Test::Output = 0
 [Prereqs]
 Apache::ASP      = 0
 App::Info        = 0
+Authen::SASL     = 0
 Cache::Cache     = 0
 Crypt::PasswdMD5 = 0
+Data::GUID       = 0
 Date::Manip      = 0
-DBD::mysql       = 0
+DateTime::Format::Strptime = 0
+#DBD::mysql       = 0
 DBI              = 0
+Email::Sender    = 0
+Email::Stuffer   = 0
 File::Slurp      = 0
 JSON             = 0
 Linux::Inotify2  = 0
@@ -49,7 +54,6 @@ List::MoreUtils  = 0
 Locale::Maketext::Lexicon = 0
 Locale::Maketext::Simple = 0
 LWP                = 0
-Mail::Sender       = 0
 Net::FTP           = 0
 Net::LDAP          = 0
 Net::SCP           = 0
