Updating dist.ini file (bis)

--- a/dist.ini
+++ b/dist.ini
@@ -43,7 +43,7 @@ Crypt::PasswdMD5 = 0
 Data::GUID       = 0
 Date::Manip      = 0
 DateTime::Format::Strptime = 0
-#DBD::mysql       = 0
+;DBD::mysql       = 0
 DBI              = 0
 Email::Sender    = 0
 Email::Stuffer   = 0
