Fixing 'vms file length' Travis CI issues

--- a/dist.ini
+++ b/dist.ini
@@ -99,7 +99,7 @@ critic_config = xt/release/perlcritic.rc
 
 [Test::Portability]
 ; disable test_one_dot for jquery filenames
-; test_vms_length (too restrictive length)
-options = test_one_dot = 0, test_vms_length = 1
+; and test_vms_length (too restrictive length)
+options = test_one_dot = 0, test_vms_length = 0
 
 [Test::UnusedVars]
