Fixing Travis CI 'author-eol.t' issue

--- a/dist.ini
+++ b/dist.ini
@@ -95,7 +95,8 @@ critic_config = xt/release/perlcritic.rc
 
 [Test::Kwalitee]
 
-[Test::EOL]
+;[Test::EOL]
+; disabled for 'Global symbol "@filenames" requires explicit package name at t/author-eol.t line 24' issue 
 
 [Test::Portability]
 ; disable test_one_dot for jquery filenames
