Fixing Apache 2 configuration for non-debian system

--- a/etc/octopussy/apache2_other.conf
+++ b/etc/octopussy/apache2_other.conf
@@ -1,4 +1,4 @@
-ServerRoot "/etc/octopussy"
+ServerRoot "/etc/httpd"
 ServerName octopussy
 
 PidFile /var/run/octopussy/apache2.pid
@@ -8,6 +8,8 @@ KeepAlive On
 MaxKeepAliveRequests 100
 KeepAliveTimeout 15
 
+IncludeOptional /etc/httpd/conf.modules.d/*.conf
+
 User octopussy
 Group octopussy
 
@@ -15,12 +17,6 @@ HostnameLookups Off
 
 ErrorLog /var/log/httpd/octopussy-error.log
 LogLevel warn
-
-LoadModule dir_module           /etc/httpd/modules/mod_dir.so
-LoadModule perl_module          /etc/httpd/modules/mod_perl.so
-LoadModule ssl_module           /etc/httpd/modules/mod_ssl.so
-LoadModule log_config_module    /etc/httpd/modules/mod_log_config.so
-LoadModule mime_module           /etc/httpd/modules/mod_mime.so
 
 TypesConfig /etc/mime.types
 
