D::Z::P::Test::Portability & D::Z::P::Test::UnusedVars added

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,6 +30,8 @@ jobs:
         Dist::Zilla::Plugin::Test::Kwalitee
         Dist::Zilla::Plugin::Test::Kwalitee::Extra 
         Dist::Zilla::Plugin::Test::Perl::Critic
+        Dist::Zilla::Plugin::Test::Portability
+        Dist::Zilla::Plugin::Test::UnusedVars
       
     - name: Install required modules
       run: dzil listdeps | xargs cpanm --sudo
